kubernetes/overlays/aws/init_singleuser_image_pytorch.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: prepull-singleuser-torch
spec:
  selector:
    matchLabels:
      name: prepull-singleuser-torch
  template:
    metadata:
      labels:
        name: prepull-singleuser-torch
    spec:
      containers:
      - name: pause
        image: google/pause
      volumes:
        - name: docker
          hostPath:
            path: /var/run
        - name: docker-config
          secret:
            secretName: regcred
            items:
              - key: .dockerconfigjson
                path: config.json
        - name: dockerfile
          configMap:
            name: singleuser-torch-dockerfile
